--- a/RI/TPRI/TP2.ipynb
+++ b/RI/TPRI/TP2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,16 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<>:76: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "<>:76: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_15072\\1159584981.py:76: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:80: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:80: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_15956\\770344369.py:80: SyntaxWarning: invalid escape sequence '\\.'\n",
       "  ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>>\n"
      ]
     }
@@ -86,14 +86,18 @@
     "        self.N = N\n",
     "        self.Lancaster = Lancaster\n",
     "        self.split = split\n",
-    "        \n",
+    "        self.weightSum2 = {}\n",
+    "        for key in self.weightDict.keys():\n",
+    "            if key[1] not in self.weightSum2.keys():\n",
+    "                self.weightSum2[key[1]] = 0\n",
+    "            self.weightSum2[key[1]] += self.weightDict[key]**2\n",
     "        self.TDFP_DTFP()\n",
     "    def TDFP_DTFP(self):\n",
     "        self.TDFP = []\n",
     "        self.DTFP = []\n",
     "        for key in self.freqDict.keys():\n",
-    "            self.TDFP.append((key[0],key[1],self.freqDict[key],self.weightDict[key]))\n",
-    "            self.DTFP.append((key[1],key[0],self.freqDict[key],self.weightDict[key]))        \n",
+    "            self.TDFP.append((str(key[0]),key[1],self.freqDict[key],self.weightDict[key]))\n",
+    "            self.DTFP.append((key[1],str(key[0]),self.freqDict[key],self.weightDict[key]))        \n",
     "    def normalize(self,text):\n",
     "        if self.Lancaster :\n",
     "            Lancaster = nltk.LancasterStemmer()\n",
@@ -148,22 +152,20 @@
     "        for term in termes:\n",
     "            normterms.append(self.normalize(term))\n",
     "\n",
-    "        for doc in range(self.N):\n",
+    "        for doc in range(1,self.N+1):\n",
     "            QD = 0\n",
-    "            v2 = 0\n",
-    "            w2 = 0\n",
+    "            w2 = self.weightSum2[doc]\n",
     "\n",
     "            for term in normterms:\n",
     "                if (term.lower(),doc) in self.freqDict.keys():\n",
     "                    weight = self.weightDict[(term.lower(),doc)]\n",
     "                    QD+= weight\n",
-    "                    w2+= weight**2\n",
-    "                    v2+= 1**2\n",
+    "            \n",
     "            try:\n",
     "                if typeV == vect.COSINE:\n",
-    "                    QD = QD / (math.sqrt(v2)*math.sqrt(w2))\n",
+    "                    QD = QD / (math.sqrt(len(normterms))*math.sqrt(w2))\n",
     "                if typeV == vect.JACCARD:\n",
-    "                    QD = QD / (w2+v2 - QD)\n",
+    "                    QD = QD / (w2+len(normterms) - QD)\n",
     "            except ZeroDivisionError:\n",
     "                QD = 0\n",
     "            rsv[doc] = QD\n",
@@ -193,12 +195,12 @@
     "            avdl += dls[key]\n",
     "        avdl = avdl / len(dls.keys())\n",
     "\n",
-    "        for doc in range(self.N):\n",
+    "        for doc in range(1,self.N+1):\n",
     "            rsv[doc] = 0\n",
     "            for term in normterms:\n",
     "                if (term,doc) in self.freqDict.keys():\n",
     "                    ni = 0\n",
-    "                    for doc2 in range(self.N):\n",
+    "                    for doc2 in range(1,self.N+1):\n",
     "                        if (term,doc2) in self.freqDict.keys():\n",
     "                            ni+=1\n",
     "\n",
@@ -214,7 +216,7 @@
     "    def boolean(self,text):\n",
     "        text = self.splitter(text)\n",
     "        docText = {}\n",
-    "        for doc in range(self.N):\n",
+    "        for doc in range(1,self.N+1):\n",
     "            copy = text.copy()\n",
     "            lexique = [\" * \",\" - \",\" + \",\" 1 \"]\n",
     "            copy = [\" * \" if item == \"AND\" else item for item in copy]\n",
@@ -240,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,22 +254,78 @@
     "N = df[\"Doc\"].max()\n",
     "\n",
     "d = Docs()\n",
-    "d.buildFrom(weightDict=weight_dict,freqDict=freq_dict,maxfreq=maxfreq,N=N,Lancaster=True,split=False)\n",
-    "d.MV(\"document\",vect.SCALAR)\n",
-    "\n",
-    "pickle.dump(d,open(\"PorterSplit.p\",\"wb\"))\n"
+    "d.buildFrom(weightDict=weight_dict,freqDict=freq_dict,maxfreq=maxfreq,N=N,Lancaster=False,split=False)\n",
+    "pickle.dump(d,open(\"PorterSplit.p\",\"wb\"))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"data/PorterToken_TDFP.csv\")\n",
+    "\n",
+    "weight_dict = df.set_index(['Mot', 'Doc'])['Poids'].to_dict()\n",
+    "freq_dict = df.set_index(['Mot', 'Doc'])['Freq'].to_dict()\n",
+    "maxfreq = df.groupby('Doc')['Freq'].max().to_dict()\n",
+    "N = df[\"Doc\"].max()\n",
+    "\n",
+    "d = Docs()\n",
+    "d.buildFrom(weightDict=weight_dict,freqDict=freq_dict,maxfreq=maxfreq,N=N,Lancaster=False,split=True)\n",
+    "pickle.dump(d,open(\"PorterToken.p\",\"wb\"))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"data/LancasterToken_TDFP.csv\")\n",
+    "\n",
+    "weight_dict = df.set_index(['Mot', 'Doc'])['Poids'].to_dict()\n",
+    "freq_dict = df.set_index(['Mot', 'Doc'])['Freq'].to_dict()\n",
+    "maxfreq = df.groupby('Doc')['Freq'].max().to_dict()\n",
+    "N = df[\"Doc\"].max()\n",
+    "\n",
+    "d = Docs()\n",
+    "d.buildFrom(weightDict=weight_dict,freqDict=freq_dict,maxfreq=maxfreq,N=N,Lancaster=True,split=True)\n",
+    "pickle.dump(d,open(\"LancasterToken.p\",\"wb\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"data/LancasterSplit_TDFP.csv\")\n",
+    "\n",
+    "weight_dict = df.set_index(['Mot', 'Doc'])['Poids'].to_dict()\n",
+    "freq_dict = df.set_index(['Mot', 'Doc'])['Freq'].to_dict()\n",
+    "maxfreq = df.groupby('Doc')['Freq'].max().to_dict()\n",
+    "N = df[\"Doc\"].max()\n",
+    "\n",
+    "d = Docs()\n",
+    "d.buildFrom(weightDict=weight_dict,freqDict=freq_dict,maxfreq=maxfreq,N=N,Lancaster=True,split=False)\n",
+    "pickle.dump(d,open(\"LancasterSplit.p\",\"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 0\n"
+      "1 0\n",
+      "1 1\n",
+      "[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0] [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n"
      ]
     },
     {
@@ -279,62 +337,17 @@
       "  File \"d:\\APPS\\python\\Lib\\tkinter\\__init__.py\", line 1948, in __call__\n",
       "    return self.func(*args)\n",
       "           ^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_15072\\1946582376.py\", line 47, in on_token_change\n",
-      "    search()\n",
-      "  File \"C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_15072\\1946582376.py\", line 10, in search\n",
-      "    table.delete(*table.get_children())\n",
-      "                  ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"d:\\APPS\\python\\Lib\\tkinter\\ttk.py\", line 1195, in get_children\n",
-      "    self.tk.call(self._w, \"children\", item or '') or ())\n",
-      "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "_tkinter.TclError: invalid command name \".!frame.!treeview\"\n"
+      "  File \"C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_15956\\2711492402.py\", line 135, in on_query_change\n",
+      "    P.append(max([p for r,p in zip(Ri,Pi) if r >= i/10]))\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "ValueError: max() iterable argument is empty\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"d:\\APPS\\python\\Lib\\tkinter\\__init__.py\", line 1948, in __call__\n",
-      "    return self.func(*args)\n",
-      "           ^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_15072\\1946582376.py\", line 47, in on_token_change\n",
-      "    search()\n",
-      "  File \"C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_15072\\1946582376.py\", line 10, in search\n",
-      "    table.delete(*table.get_children())\n",
-      "                  ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"d:\\APPS\\python\\Lib\\tkinter\\ttk.py\", line 1195, in get_children\n",
-      "    self.tk.call(self._w, \"children\", item or '') or ())\n",
-      "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "_tkinter.TclError: invalid command name \".!frame.!treeview\"\n",
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"d:\\APPS\\python\\Lib\\tkinter\\__init__.py\", line 1948, in __call__\n",
-      "    return self.func(*args)\n",
-      "           ^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_15072\\1946582376.py\", line 33, in search\n",
-      "    if text.lower() in terme[1].lower():\n",
-      "                       ^^^^^^^^^^^^^^\n",
-      "AttributeError: 'int' object has no attribute 'lower'\n",
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"d:\\APPS\\python\\Lib\\tkinter\\__init__.py\", line 1948, in __call__\n",
-      "    return self.func(*args)\n",
-      "           ^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_15072\\1946582376.py\", line 50, in on_index_change\n",
-      "    search()\n",
-      "  File \"C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_15072\\1946582376.py\", line 33, in search\n",
-      "    if text.lower() in terme[1].lower():\n",
-      "                       ^^^^^^^^^^^^^^\n",
-      "AttributeError: 'float' object has no attribute 'lower'\n"
+      "0 1\n"
      ]
     },
     {
@@ -353,37 +366,49 @@
     "from tkinter import ttk\n",
     "from matplotlib import pyplot as plt\n",
     "from matplotlib.backends.backend_tkagg import FigureCanvasTkAgg\n",
-    "\n",
+    "table = None\n",
     "def search():\n",
     "    global stemming\n",
-    "\n",
+    "    if table == None:\n",
+    "        return\n",
     "    text = query_text.get()\n",
-    "    table.delete(*table.get_children())\n",
-    "    if index_var.get() == 0:\n",
-    "        data = d.TDFP\n",
-    "    else:\n",
-    "        data = d.DTFP\n",
+    "\n",
+    "    if table != None:\n",
+    "        if len(table.get_children()) > 0:\n",
+    "            table.delete(*table.get_children())\n",
+    "\n",
+    "    searchTuples = []\n",
     "\n",
     "    if text == \"\":\n",
-    "        for terme in data:\n",
-    "            if type(terme[0]) is str:\n",
-    "                    table.insert(\"\", \"end\", values=[terme[0],terme[1],terme[2],terme[3]])\n",
-    "            else:\n",
-    "                    table.insert(\"\", \"end\", values=[terme[0],terme[1],terme[2],terme[3]])\n",
-    "        return\n",
+    "        for terme in d.TDFP:\n",
+    "            searchTuples.append(terme)\n",
+    "    else:\n",
+    "        searchText = d.splitter(text)\n",
+    "        searchText = [d.normalize(terme) for terme in searchText]\n",
+    "\n",
+    "        for text in searchText:\n",
+    "            for terme in d.TDFP:\n",
+    "                mot = terme[0]\n",
+    "                if type(mot) is str:\n",
+    "                    if text.lower() in mot:\n",
+    "                        searchTuples.append(terme)\n",
+    "                try:\n",
+    "                    if float(text) == mot:\n",
+    "                        searchTuples.append(terme)\n",
+    "                except: \n",
+    "                    pass\n",
+    "\n",
+    "\n",
+    "    if index_var.get() == 0:\n",
+    "        sortedTuples = sorted(searchTuples, key=lambda x: x[0])\n",
+    "        for term in sortedTuples:\n",
+    "            table.insert(\"\", \"end\", values=[term[0],term[1],term[2],term[3]])\n",
+    "    else:\n",
+    "        sortedTuples = sorted(searchTuples, key=lambda x: x[1])\n",
+    "        for term in sortedTuples:\n",
+    "            table.insert(\"\", \"end\", values=[term[1],term[0],term[2],term[3]])    \n",
     "    \n",
-    "    searchText = d.splitter(text)\n",
-    "    searchText = [d.normalize(terme) for terme in searchText]\n",
-    "\n",
-    "    for text in searchText:\n",
-    "        for terme in data:\n",
-    "            if type(terme[0]) is str:\n",
-    "                if text.lower() in terme[0].lower():\n",
-    "                    table.insert(\"\", \"end\", values=[terme[0],terme[1],terme[2],terme[3]])\n",
-    "            else:\n",
-    "                if text.lower() in terme[1].lower():\n",
-    "                    table.insert(\"\", \"end\", values=[terme[0],terme[1],terme[2],terme[3]])\n",
-    "\n",
+    "    \n",
     "def on_token_change(*args):\n",
     "    global d\n",
     "    print(stemming.get(),token.get())\n",
@@ -446,12 +471,14 @@
     "        total_revealent_documents = len([judgement for judgement in judgements if judgement[0] == (int(spinbox_var.get())+1)])\n",
     "        total_documents = len(set([judgement[1] for judgement in judgements]))\n",
     "        relevant_documents = [judgement[1] for judgement in judgements if judgement[0] == (int(spinbox_var.get())+1)]\n",
-    "        bin_relevant_documents = [1 if doc in relevant_documents else 0 for doc in range(1,11)]\n",
+    "        bin_relevant_documents = [1 if doc in relevant_documents else 0 for doc in range(1,total_documents)]\n",
+    "\n",
     "        p = len(relevant_documents)/total_documents\n",
     "        p5 = len(relevant_documents)/5\n",
     "        p10 = len(relevant_documents)/10\n",
     "        r = len(relevant_documents)/total_revealent_documents\n",
     "        f = 2*((p*r)/(p+r))\n",
+    "\n",
     "        metriques_dict[\"precision\"].config(text=str(p))\n",
     "        metriques_dict[\"p@5\"].config(text=str(p5))\n",
     "        metriques_dict[\"p@10\"].config(text=str(p10))\n",
@@ -459,13 +486,15 @@
     "        metriques_dict[\"fmeasure\"].config(text=str(f))\n",
     "        Ri = []\n",
     "        Pi = []\n",
-    "\n",
-    "        for i in range(1,11):\n",
+    "        \n",
+    "        for i in range(1,total_documents):\n",
     "            Ri.append(sum(bin_relevant_documents[:i])/total_revealent_documents)\n",
     "            Pi.append(sum(bin_relevant_documents[:i])/(i))\n",
+    "\n",
+    "        print(Ri,Pi)\n",
     "        Rj = []\n",
     "        P = []\n",
-    "        for i in range(0,11):\n",
+    "        for i in range(0,total_documents):\n",
     "            Rj.append(i/10)\n",
     "            P.append(max([p for r,p in zip(Ri,Pi) if r >= i/10]))\n",
     "        # Clear the previous plot\n",
@@ -653,13 +682,6 @@
     "    table.insert(\"\", \"end\", values=[dat[0],dat[1],dat[2],dat[3]])\n",
     "root.mainloop()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
